@@ -38,10 +38,14 @@ ext/nokogiri/xml_processing_instruction.c
 ext/nokogiri/xml_processing_instruction.h
 ext/nokogiri/xml_reader.c
 ext/nokogiri/xml_reader.h
+ext/nokogiri/xml_relax_ng.c
+ext/nokogiri/xml_relax_ng.h
 ext/nokogiri/xml_sax_parser.c
 ext/nokogiri/xml_sax_parser.h
 ext/nokogiri/xml_sax_push_parser.c
 ext/nokogiri/xml_sax_push_parser.h
+ext/nokogiri/xml_schema.c
+ext/nokogiri/xml_schema.h
 ext/nokogiri/xml_syntax_error.c
 ext/nokogiri/xml_syntax_error.h
 ext/nokogiri/xml_text.c
@@ -95,10 +99,12 @@ lib/nokogiri/xml/node_set.rb
 lib/nokogiri/xml/notation.rb
 lib/nokogiri/xml/processing_instruction.rb
 lib/nokogiri/xml/reader.rb
+lib/nokogiri/xml/relax_ng.rb
 lib/nokogiri/xml/sax.rb
 lib/nokogiri/xml/sax/document.rb
 lib/nokogiri/xml/sax/parser.rb
 lib/nokogiri/xml/sax/push_parser.rb
+lib/nokogiri/xml/schema.rb
 lib/nokogiri/xml/syntax_error.rb
 lib/nokogiri/xml/text.rb
 lib/nokogiri/xml/xpath.rb
@@ -112,9 +118,13 @@ test/css/test_nthiness.rb
 test/css/test_parser.rb
 test/css/test_tokenizer.rb
 test/css/test_xpath_visitor.rb
+test/files/address_book.rlx
+test/files/address_book.xml
 test/files/dont_hurt_em_why.xml
 test/files/exslt.xml
 test/files/exslt.xslt
+test/files/po.xml
+test/files/po.xsd
 test/files/staff.xml
 test/files/staff.xslt
 test/files/tlm.html
@@ -167,6 +177,8 @@ test/xml/test_node_encoding.rb
 test/xml/test_node_set.rb
 test/xml/test_processing_instruction.rb
 test/xml/test_reader_encoding.rb
+test/xml/test_relax_ng.rb
+test/xml/test_schema.rb
 test/xml/test_text.rb
 test/xml/test_unparented_node.rb
 test/xml/test_xpath.rb
