@@ -9,6 +9,7 @@
 #include <libxml/xpathInternals.h>
 #include <libxml/xmlreader.h>
 #include <libxml/xmlsave.h>
+#include <libxml/xmlschemas.h>
 #include <libxml/HTMLparser.h>
 #include <libxml/HTMLtree.h>
 
@@ -88,6 +89,8 @@ int vasprintf (char **strp, const char *fmt, va_list ap);
 #include <html_sax_parser.h>
 #include <xslt_stylesheet.h>
 #include <xml_syntax_error.h>
+#include <xml_schema.h>
+#include <xml_relax_ng.h>
 
 extern VALUE mNokogiri ;
 extern VALUE mNokogiriXml ;
