@@ -1,0 +1,9 @@
+#ifndef NOKOGIRI_XML_RELAX_NG
+#define NOKOGIRI_XML_RELAX_NG
+
+#include <native.h>
+
+void init_xml_relax_ng();
+
+extern VALUE cNokogiriXmlRelaxNG;
+#endif
