@@ -1,0 +1,9 @@
+#ifndef NOKOGIRI_XML_SCHEMA
+#define NOKOGIRI_XML_SCHEMA
+
+#include <native.h>
+
+void init_xml_schema();
+
+extern VALUE cNokogiriXmlSchema;
+#endif
